updated class formatting